<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_logar_main"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:layout_marginStart="161dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="108dp"
        android:text="@string/logar"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_senha_main"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/field_senha_main"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="176dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/field_email_main" />

    <EditText
        android:id="@+id/field_email_main"
        android:layout_width="213dp"
        android:layout_height="45dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="125dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="23dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/field_senha_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Logo" />

    <TextView
        android:id="@+id/Logo"
        android:layout_width="162dp"
        android:layout_height="34dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="125dp"
        android:layout_marginBottom="125dp"
        android:text="@string/barber_time"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toTopOf="@+id/field_email_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.48000002" />

    <Button
        android:id="@+id/btn_cadastro_main"
        android:layout_width="121dp"
        android:layout_height="42dp"
        android:layout_marginStart="158dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="165dp"
        android:layout_marginBottom="45dp"
        android:text="@string/cadastrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.393"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_logar_main"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>